Added license in composer

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     ],
     "type": "library",
     "homepage": "https://github.com/anthonysan95/url-signer",
+    "license": "MIT",
     "authors": [
         {
             "name": "Anthony Santoro",
